<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ButtonText">I’m a button</string>
    <string name="RadioButton">Radio Button</string>
    <string name="CheckBox">No</string>
    <string name="checkBox2">CheckBox</string>
    <string name="switch1">What does this do?</string>
    <string name="loginbtn">LOGIN</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="dialog_title">Welcome</string>
    <string name="ok">Yes</string>
    <string name="Notok">No</string>
    <string name="content_description">imageview</string>
    <string name="Response">Here is my response</string>
    <string name="startchat">Start Chat</string>
    <string name="sendbtn">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="myChoice">Mayank Here</string>
    <string name="cancel">No</string>
    <string name="choice">Do you want to go back?</string>
    <string name="Notification">Jati Rehje</string>
    <string name="save_me">Save me</string>

</resources>